<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/img_fav_photo"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/dummy_photos"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.028"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/mv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/name_hero"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toEndOf="@+id/img_fav_photo"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/tv_dateReleased"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:padding="2dp"
            android:text="@string/date_realesed"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/img_fav_photo"
            app:layout_constraintTop_toBottomOf="@+id/mv_name" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/star_icon"
            android:ellipsize="end"
            android:maxLines="3"
            android:padding="7dp"
            android:src="@drawable/ic_star_color_accent"
            app:layout_constraintBottom_toTopOf="@+id/txt_description"
            app:layout_constraintStart_toEndOf="@+id/tv_dateReleased"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_fav_voteAverege"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="40dp"
            android:padding="2dp"
            android:text="@string/vote_average"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_fav_voteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:padding="2dp"
            android:text="@string/vote_count"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/tv_fav_voteAverege"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="263dp"
            android:layout_height="76dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/img_fav_photo"
            android:layout_toRightOf="@id/img_fav_photo"
            android:ellipsize="end"
            android:maxLines="5"
            android:padding="2dp"
            android:text="@string/lorem"
            app:layout_constraintStart_toEndOf="@+id/img_fav_photo"
            app:layout_constraintTop_toBottomOf="@+id/tv_dateReleased"
            tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>